--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
-
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId "kennytesting.contactstest"
-        minSdkVersion 15
-        targetSdkVersion 21
+        minSdkVersion 10
+        targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName '0.1'
     }
     buildTypes {
         release {
@@ -17,10 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.facebook.fresco:fresco:0.7.0'
+    compile 'com.android.support:appcompat-v7:23.0.+'
 }
